--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "01e7b78e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-11 23:17:25.172886: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-11-11 23:17:25.194734: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "## load all librabies and trained model\n",
     "import tensorflow as tf\n",
@@ -17,10 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "50ae4366",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    }
+   ],
    "source": [
     "## load the ann trainned model ,scaler pikle on ehot\n",
     "model=load_model('model.h5')\n",
@@ -38,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "713f343d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "3e2949d3",
    "metadata": {},
    "outputs": [
@@ -114,7 +132,7 @@
        "0               1.0                0.0              0.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "018935bb",
    "metadata": {},
    "outputs": [],
@@ -138,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "8317fff9",
    "metadata": {},
    "outputs": [
@@ -210,7 +228,7 @@
        "0                0.0              0.0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "aae3821a",
    "metadata": {},
    "outputs": [],
@@ -235,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "8e488293",
    "metadata": {},
    "outputs": [
@@ -298,7 +316,7 @@
        "0          1               1            50000  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "2ac0f737",
    "metadata": {},
    "outputs": [],
@@ -320,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "334029ef",
    "metadata": {},
    "outputs": [
@@ -390,7 +408,7 @@
        "0              0.0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "402962f0",
    "metadata": {},
    "outputs": [],
@@ -412,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "82e5d554",
    "metadata": {},
    "outputs": [
@@ -424,7 +442,7 @@
        "        -0.57946723, -0.57638802]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "e44c296f",
    "metadata": {},
    "outputs": [
@@ -443,16 +461,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 43ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 69ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.07880651]], dtype=float32)"
+       "array([[0.04241772]], dtype=float32)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "99cee0a4",
    "metadata": {},
    "outputs": [],
@@ -475,17 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "c1323b0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.07880651"
+       "0.04241772"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "bef58de8",
    "metadata": {},
    "outputs": [
