--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -3,90 +3,76 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "01e7b78e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-11-11 23:17:25.172886: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-11 23:17:25.194734: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "WARNING:tensorflow:From e:\\UDemy Final\\ANN Classification\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "## load all librabies and trained model\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import load_model\n",
     "import pickle\n",
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "50ae4366",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-     ]
-    }
-   ],
-   "source": [
-    "## load the ann trainned model ,scaler pikle on ehot\n",
-    "model=load_model('model.h5')\n",
-    "\n",
-    "## load the encoder and scaler\n",
-    "with open('label_encoder_gender.pkl','rb') as file:\n",
-    "    label_encoder_gender=pickle.load(file)\n",
-    "    \n",
-    "with open('onehot_encoder_geo.pkl','rb') as file:\n",
-    "    onehot_encoder_geo=pickle.load(file)\n",
-    "    \n",
-    "with open('scaler.pkl','rb') as file:\n",
-    "    scaler=pickle.load(file)"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "713f343d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Example input data for prediction\n",
-    "input_data={\n",
-    "    'CreditScore':600,\n",
-    "    'Geography':'France',\n",
-    "    'Gender':'Male',\n",
-    "    'Age':40,\n",
-    "    'Tenure':3,\n",
-    "    'Balance':60000,\n",
-    "    'NumOfProducts':2,\n",
-    "    'HasCrCard':1,\n",
-    "    'IsActiveMember':1,\n",
-    "    'EstimatedSalary':50000\n",
-    "}"
+    "### Load the trained model, scaler pickle,onehot\n",
+    "model=load_model('model.h5')\n",
+    "\n",
+    "## load the encoder and scaler\n",
+    "with open('onehot_encoder_geo.pkl','rb') as file:\n",
+    "    label_encoder_geo=pickle.load(file)\n",
+    "\n",
+    "with open('label_encoder_gender.pkl', 'rb') as file:\n",
+    "    label_encoder_gender = pickle.load(file)\n",
+    "\n",
+    "with open('scaler.pkl', 'rb') as file:\n",
+    "    scaler = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3e2949d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example input data\n",
+    "input_data = {\n",
+    "    'CreditScore': 600,\n",
+    "    'Geography': 'France',\n",
+    "    'Gender': 'Male',\n",
+    "    'Age': 40,\n",
+    "    'Tenure': 3,\n",
+    "    'Balance': 60000,\n",
+    "    'NumOfProducts': 2,\n",
+    "    'HasCrCard': 1,\n",
+    "    'IsActiveMember': 1,\n",
+    "    'EstimatedSalary': 50000\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/abc/Desktop/ANN/annenv/lib/python3.11/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
+      "e:\\UDemy Final\\ANN Classification\\venv\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -132,32 +118,21 @@
        "0               1.0                0.0              0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## one-hot encode 'Geography'\n",
-    "geo_encoded=onehot_encoder_geo.transform([[input_data['Geography']]]).toarray()\n",
-    "geo_encoded_df=pd.DataFrame(geo_encoded,columns=onehot_encoder_geo.get_feature_names_out(['Geography']))\n",
-    "geo_encoded_df"
+    "# One-hot encode 'Geography'\n",
+    "geo_encoded = label_encoder_geo.transform([[input_data['Geography']]]).toarray()\n",
+    "geo_encoded_df = pd.DataFrame(geo_encoded, columns=label_encoder_geo.get_feature_names_out(['Geography']))\n",
+    "geo_encoded_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "018935bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_df=pd.DataFrame([input_data])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "8317fff9",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -191,9 +166,6 @@
        "      <th>HasCrCard</th>\n",
        "      <th>IsActiveMember</th>\n",
        "      <th>EstimatedSalary</th>\n",
-       "      <th>Geography_France</th>\n",
-       "      <th>Geography_Germany</th>\n",
-       "      <th>Geography_Spain</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -209,9 +181,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>50000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -221,40 +190,23 @@
        "   CreditScore Geography Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
        "0          600    France   Male   40       3    60000              2   \n",
        "\n",
-       "   HasCrCard  IsActiveMember  EstimatedSalary  Geography_France  \\\n",
-       "0          1               1            50000               1.0   \n",
-       "\n",
-       "   Geography_Germany  Geography_Spain  \n",
-       "0                0.0              0.0  "
+       "   HasCrCard  IsActiveMember  EstimatedSalary  \n",
+       "0          1               1            50000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## combine one-hot encoded columns with input data\n",
-    "input_data=pd.concat([input_df.reset_index(drop=True),geo_encoded_df],axis=1)\n",
-    "input_data\n",
-    "## now this row will go for prediction"
+    "input_df=pd.DataFrame([input_data])\n",
+    "input_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "aae3821a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Encode Categorical varaible\n",
-    "input_df['Gender']=label_encoder_gender.transform(input_df['Gender'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "8e488293",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -316,30 +268,20 @@
        "0          1               1            50000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Encode categorical variables\n",
+    "input_df['Gender']=label_encoder_gender.transform(input_df['Gender'])\n",
     "input_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2ac0f737",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## \n",
-    "input_df=pd.concat([input_df.drop('Geography',axis=1),geo_encoded_df],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "334029ef",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -408,30 +350,20 @@
        "0              0.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## concatination one hot encoded \n",
+    "input_df=pd.concat([input_df.drop(\"Geography\",axis=1),geo_encoded_df],axis=1)\n",
     "input_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "402962f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## sacling the input data\n",
-    "input_scaled=scaler.transform(input_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "82e5d554",
    "metadata": {},
    "outputs": [
     {
@@ -448,26 +380,27 @@
     }
    ],
    "source": [
+    "## Scaling the input data\n",
+    "input_scaled=scaler.transform(input_df)\n",
     "input_scaled"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e44c296f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 69ms/step\n"
+      "1/1 [==============================] - 0s 94ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.04241772]], dtype=float32)"
+       "array([[0.02973952]], dtype=float32)"
       ]
      },
      "execution_count": 13,
@@ -476,7 +409,7 @@
     }
    ],
    "source": [
-    "## prediction\n",
+    "## PRedict churn\n",
     "prediction=model.predict(input_scaled)\n",
     "prediction"
    ]
@@ -484,23 +417,21 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "99cee0a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_proba=prediction[0][0]"
+    "prediction_proba = prediction[0][0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c1323b0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.04241772"
+       "0.029739516"
       ]
      },
      "execution_count": 15,
@@ -515,29 +446,26 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bef58de8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The  customer is not likely to churn\n"
+      "The customer is not likely to churn.\n"
      ]
     }
    ],
    "source": [
-    "if prediction_proba >0.5:\n",
-    "    print(\"The customer is likely to churn\")\n",
-    "    \n",
+    "if prediction_proba > 0.5:\n",
+    "    print('The customer is likely to churn.')\n",
     "else:\n",
-    "    print(\"The  customer is not likely to churn\")"
+    "    print('The customer is not likely to churn.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "892cab96",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -545,7 +473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "annenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -563,5 +491,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
